|SOURCE| [Linux::Renderer] * Stubbed-out a simple software-based renderer (using OpenGL for fast copying   of the pixels to the GPU for displaying) * Implemented CreateBuffers which will use the width, height, and back buffer   count to create the display buffers. * Implemented DeleteBuffers which deletes all the display buffers

--- a/Source/Linux/Makefile
+++ b/Source/Linux/Makefile
@@ -31,7 +31,7 @@ UNAME			= $(shell uname)
 UNAME_MACHINE	= $(shell uname -m)
 
 ifeq ($(UNAME), Linux)
-	CPPFLAGS_EXT	= 
+	CPPFLAGS_EXT	= -std=c++11
 	SYSIPATH	= -I/usr/include/xorg
 	SYSLIBS		= -lX11 -lGL -lrt
 	LINKFLAGS	=
@@ -60,10 +60,10 @@ endif
 CPP = g++
 
 CPPFLAGS	=	-c -m$(BITSIZE) -DZED_BUILD_$(BUILD_DEF) \
-				-DZED_PLATFORM_$(BUILD_PLATFORM) \
-				-DZED_PLATFORM_$(BUILD_PLATFORM)_$(BUILD_ARCH) \
-				-DZED_PLATFORM_$(BUILD_PLATFORM)_$(BUILD_ARCH)_$(BITSIZE) \
-				-DZED_BITSIZE_$(BITSIZE) -DZED_ARCH_$(BUILD_ARCH) \
+				-DBUILD_PLATFORM_$(BUILD_PLATFORM) \
+				-DBUILD_PLATFORM_$(BUILD_PLATFORM)_$(BUILD_ARCH) \
+				-DBUILD_PLATFORM_$(BUILD_PLATFORM)_$(BUILD_ARCH)_$(BITSIZE) \
+				-DBUILD_BITSIZE_$(BITSIZE) -DBUILD_ARCH_$(BUILD_ARCH) \
 				-I$(TOPSRC)/Linux/Headers -I$(TOPSRC)/Common/Headers
 SYSIPATH	=
 INCPATH		=	
